Fix banner alignment on smaller devices

--- a/public/css/docs/typography.css
+++ b/public/css/docs/typography.css
@@ -552,6 +552,10 @@ button.side-menu-list-item-namespace-icon:hover {
 * Banner.
 */
 
+.banner-wrapper {
+	text-align: center;
+}
+
 .banner .banner-tagline {
 	font-family: var(--thin-font-family);
 	font-size: 1.3em;
